# ReGen

./: .gitignore  PdfFromJSON.ipynb  README.md  Scraped Jobs Data Scientist.csv  WorkFlow.ipynb  jobListingScraper.py  linkedincookies.pkl  linkedincookies1.pkl  pyproject.toml  requirements.txt
data/: Scraped Data Analyst.csv  Scraped Digital Marketing.csv  Scraped Fullstack Developer.csv  Scraped Jobs MLOps.csv  Scraped MLOps Engineer.csv  Scraped Machine Learning Engineer.csv
inputs/: resume_data.json
notebooks/: PdfFromJSON.ipynb  WorkFlow.ipynb
scripts/: jobListingScraper.py
src/: app.py  jobListingScraper.py  pdfLoader.py  reGenerate.py  resumeGenerator.py  resumeRelevancyScore.py  resumeRestructre.py
src/regen/: __init__.py
src/regen/ResumeAnalytics/: Generate HTML.ipynb  RUN EVERYTHING.ipynb  ResumeValidator.py  ScoresExtract.py  jobDescriptionScraper.py  resume_template.html
src/regen/ResumeScoreValidator/: RUN EVERYTHING.ipynb  jobDescriptionScraper.py
src/regen/scraper/: linkedin_scraper.ipynb
src/regen/stage1/: LinkedinDescriptionScraper.py  LinkedinLogin.py  NB.ipynb
src/regen/stage2/scraper/: jobs.py  objects.py
src/regen/stock/: ReGen.drawio  Resume Scoring Prompt.txt
